# testcontainers-bazel-demo

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.work  go.work.sum  maven_install.json
.github/workflows/: ci.yml
customers/: BUILD  BUILD.bazel
customers/src/main/java/com/testcontainers/demo/: CustomerService.java  DBConnectionProvider.java
customers/src/test/java/com/testcontainers/demo/: CustomerServiceTest.java
products/: BUILD.bazel  go.mod  go.sum  repo.go  repo_test.go
